# cnn

./: Makefile.am  README.md  autogen.sh  configure.ac
dataset/digits/: generate.sh  readme.txt
doc/explanation/: explanation.md
papers/: beginner_guide.txt
src/: Makefile.am
src/cnn/: Makefile.am  digits.c  digits.h  doxifile.cfg  filter.c  filter.h  filterfam.c  filterfam.h  gen_fontlist.sh  grid.c  grid.h  img.c  img.h  imgfam.c  imgfam.h  layer.c  layer.h  main.c  util.c
src/digits/: Makefile.am  digits.c  gen_patterns.sh  img.c  img.h  imgfam.c  imgfam.h  util.h
src/edge/: Makefile.am  doxifile.cfg  edge.c  util.h
src/grid/: Makefile.am  digits.c  digits.h  filter.c  filter.h  filterfam.c  filterfam.h  gen_patterns.sh  grid.c  grid.h  img.c  img.h  imgfam.c  imgfam.h  layer3.c  main.c  util.c  util.h
src/inverter/: Makefile.am  simple_png_reader.c
